# routers/transactions.js
@@ -1,7 +1,7 @@
 const express = require('express')
 const router = express.Router()
 
-const { makeTransaction, getUserSingleTransactions, getTransactionCode, rechargeAccountBalance } = require('../controller/transactions')
+const { makeTransaction, getUserSingleTransactions, getTransactionCode, rechargeAccountBalance, rechargeMyAccount } = require('../controller/transactions')
 const { authenticateUser, checkPermision } = require('../middleware/authorization')
 
 
@@ -13,6 +13,8 @@ router.route('/generateCode').post(authenticateUser, getTransactionCode)
 
 router.route('/rechargeAccount').post(authenticateUser, rechargeAccountBalance)
 
+
+router.route('/creditPersonalAccount').post(authenticateUser, rechargeMyAccount)
 
 
 
